Extension 1: Main menu. Music button (will change to option in options menu). Hero changes directions.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,10 @@
 /.metadata/
+/Game$8.class
+/Game$9.class
+/Game$1.class
+/Game$2.class
+/Game$3.class
+/Game$4.class
+/Game$5.class
+/Game$6.class
+/Game$7.class
